# chaosvector-wake

./: .gitignore  CLAUDE.md  README.md  UPSTREAM-CHANGES.md  pyproject.toml
src/chaosvector_wake/: __init__.py  __main__.py  detector.py  features.py  trainer.py  wyoming_server.py
