[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaosvector-wake"
version = "0.1.0"
description = "Custom wake word detection with family voice training"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Miles Eckman" }]

dependencies = [
    "numpy>=1.24",
    "wyoming>=1.5",
    "onnxruntime>=1.16",
]

[project.optional-dependencies]
train = [
    "torch>=2.1",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
chaosvector-wake = "chaosvector_wake.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
